<resources>
    <string name="app_name">My Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="initial_light_brightness">0%</string>
    <string name="light_off">OFF</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>

    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_pages">Pages</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_other">Other</string>
    <string name="nav_drawer_categories">Categories</string>

    <!--LoginActivity-->
    <string name="server_title">Enter your server information to connect to HomeAssistant.</string>
    <string name="server_ip_hint">192.168.1.100</string>
    <string name="server_ip_title">Server Address:</string>
    <string name="server_ip_port">Port:</string>
    <string name="server_ip_default_port">8123</string>
    <string name="server_ip_port_hint">Default is 8123</string>
    <string name="server_ip_password">Password:</string>
    <string name="server_password_hint">Leave blank if no password.</string>
    <string name="server_remember">Remember password</string>
    <string name="server_connect_button">Connect!</string>
    <string name="progress_connecting">Connecting</string>
    <string name="progress_connecting_message">Please wait while checking connection.</string>
    <string name="connect_error_dialog">Unable to connect. Please check your settings and try again.</string>
    <string name="connect_success_toast">Connected successfully.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Connect to Server</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_connection">Connection Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
