<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/nav_drawer_home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <group>
        <item android:title="@string/nav_drawer_pages"
            android:orderInCategory="0"
            android:id="@+id/drawer_group_one">
            <menu>
                <group android:checkableBehavior="single">

                </group>
            </menu>
        </item>
    </group>

    <group>
        <item android:title="@string/nav_drawer_categories"
            android:orderInCategory="1"
            android:id="@+id/drawer_group_two">
            <menu>
                <group android:checkableBehavior="single">

                </group>
            </menu>
        </item>
    </group>

    <group>
        <item android:title="@string/nav_drawer_other"
            android:orderInCategory="2">
            <menu>
                <group>
                    <item android:id="@+id/menu_settings"
                        android:icon="@drawable/ic_settings_black_24dp"
                        android:title="@string/nav_drawer_settings" />
                    <item android:id="@+id/menu_about"
                        android:title="@string/nav_drawer_about" />
                </group>
            </menu>
        </item>
    </group>

</menu>